# Distributed-Data-Analysis-System

./: .gitignore.txt  README.md
275-Final-Project/: CMakeLists.txt  Testing.csv  ingestion_main.cpp  ingestion_main.h  main.cpp
Metadata-Client/: CMakeLists.txt  main.cpp  metadata_client.cpp  metadata_client.h
